@@ -1,9 +1,11 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.common.view;
 
+import java.awt.*;
 import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
@@ -18,7 +20,7 @@ import static java.awt.Color.white;
  * @author Sam Reid
  */
 public class CrystalNode extends PNode {
-    public CrystalNode( final ModelViewTransform transform, final Crystal crystal ) {
+    public CrystalNode( final ModelViewTransform transform, final Crystal crystal, final ObservableProperty<Color> color ) {
         //Draw the shape of the salt crystal at its location
         addChild( new PhetPPath( white ) {{
             crystal.position.addObserver( new VoidFunction1<ImmutableVector2D>() {
@@ -26,6 +28,12 @@ public class CrystalNode extends PNode {
                     ImmutableVector2D viewPosition = transform.modelToView( modelPosition );
                     double size = 6;
                     setPathTo( new Rectangle2D.Double( viewPosition.getX() - size / 2, viewPosition.getY() - size / 2, size, size ) );
+                }
+            } );
+            //Synchronize the color with the specified color, which can be changed by the user in the color chooser dialog
+            color.addObserver( new VoidFunction1<Color>() {
+                public void apply( Color color ) {
+                    setPaint( color );
                 }
             } );
         }} );
