@@ -1,6 +1,9 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.common.view;
 
+import java.awt.*;
+
+import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.Crystal;
 
@@ -10,7 +13,7 @@ import edu.colorado.phet.sugarandsaltsolutions.common.model.Crystal;
  * @author Sam Reid
  */
 public class SaltNode extends CrystalNode {
-    public SaltNode( final ModelViewTransform transform, final Crystal crystal ) {
-        super( transform, crystal );
+    public SaltNode( final ModelViewTransform transform, final Crystal crystal, ObservableProperty<Color> color ) {
+        super( transform, crystal, color );
     }
 }
